Fix: updated CORS and environment settings

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
+MONGO_URI=mongodb+srv://kavya:kavya1234@cluster.bgsl3rk.mongodb.net/?appName=Cluster
+CLIENT_ORIGIN=https://expense-tracker-client2.onrender.com,http://localhost:5173
 PORT=5000
-MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority&appName=<yourApp>
-JWT_SECRET=change_this_secret
-CLIENT_ORIGIN=http://localhost:5173
